--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.1.10.RELEASE</version>
 				<configuration>
 					<executable>true</executable>
 					<layout>ZIP</layout>
