--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
 				<version>2.1.10.RELEASE</version>
 				<configuration>
 					<executable>true</executable>
-					<layout>ZIP</layout>
+					<layout>JAR</layout>
 				</configuration>
 				<executions>
 					<execution>
