--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,11 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.9.10</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 			<version>2.4.6.RELEASE</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
