--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=moviemanagement
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 # MySQL settings
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/justbooktickets
 spring.datasource.username=root
 spring.datasource.password=admin@123
