--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.application.name=moviemanagement
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 # MySQL settings
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/justbooktickets
 spring.datasource.username=root
