--- a/pom.xml
+++ b/pom.xml
@@ -153,10 +153,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>2.1.10.RELEASE</version>
 				<configuration>
 					<executable>true</executable>
-					<layout>JAR</layout>
+					<layout>ZIP</layout>
 				</configuration>
 				<executions>
 					<execution>
