--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/justbooktickets
 spring.datasource.username=root
-spring.datasource.password=admin@123
+spring.datasource.password=root
 spring.datasource.initialization-mode=always
 #spring.datasource.data=classpath:/sql/import.sql
 # logging
