--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=moviemanagement
 
 #server.servlet.context-path=/shoppingCart
 # create and drop tables and sequences, loads import.sql
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 # MySQL settings
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
